request url type switched to URI instead of URL
git-svn-id: https://svn.apache.org/repos/asf/incubator/amber/trunk@963058 13f79535-47bb-0310-9956-ffa450edef68